--- a/_includes/head.html
+++ b/_includes/head.html
@@ -171,5 +171,7 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-
+  
+  <script defer src="https://umami.datadiversitylab.synology.me/script.js" data-website-id="434f494b-c167-468b-b33b-e0442ca492bf"></script>
+ 
 </head>
