--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,16 @@ layout: page
 
 {{ content }}
 
+<div class="welcome-message">
+  <h1>Bienvenidx a MacroData!</h1>
+  <p>
+    MacroData es una iniciativa para fortalecer la programación y el análisis de datos en biología evolutiva, con énfasis en ciencia abierta y colaboración entre estudiantes, docentes e investigadorxs en Colombia y América Latina. Nuestro objetivo principal es apoyar a estudiantes e investigadores colombianos en biología mediante la introducción de habilidades fundamentales de programación en R, contextualizadas en métodos comparativos filogenéticos (PCM).
+  </p>
+  <p>
+    En esta pagina, puedes explorar nuestras lineamientos de aplicación, objetivos del proyecto, publicaciones, recursos, talleres, entre otros.
+  </p>
+</div>
+
 {% assign posts = paginator.posts | default: site.posts %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
